<resources>
    <string name="app_name">MovieDbApp</string>
    <string name="rating_in_float">: %1$s</string>
    <string name="language">Language : %1$s</string>
    <string name="release">Release : %1$s</string>
    <string name="poster_detail_image">poster detail image</string>
    <string name="rating_image">rating image</string>
    <string name="vote_count_image">vote count image</string>
    <string name="backdrop_image">backdrop image</string>
    <string name="genre">Genre</string>
    <string name="language_sample">Language :</string>
    <string name="no_review_at_this_moment">No review at this moment</string>
    <string name="overview">Overview</string>
    <string name="_8_5">: 8.5</string>
    <string name="release_sample">Release :</string>
    <string name="user_reviews">User Reviews</string>
    <string name="slash">/</string>
    <string name="title">Title</string>
    <string name="_14k">14K</string>
    <string name="loading">Loading</string>
    <string name="movie_name">Movie Name</string>
    <string name="retry">Retry</string>
    <string name="user">User</string>
    <string name="review">Review</string>
</resources>