<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.MovieDetailActivity">

    <FrameLayout
        android:id="@+id/flDummy"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/yt_trailer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

    <ImageView
        android:contentDescription="@string/backdrop_image"
        android:id="@+id/iv_backdrop"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flDummy">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clScroll"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvPosterDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/clScroll">

                <ImageView
                    android:contentDescription="@string/poster_detail_image"
                    android:id="@+id/ivPosterDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxWidth="117dp"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvTitleDetail"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="17dp"
                android:maxLines="2"
                android:text="@string/title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/cvPosterDetail"
                app:layout_constraintTop_toTopOf="@id/clScroll" />

            <TextView
                android:id="@+id/tvGenre"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:maxLines="3"
                android:text="@string/genre"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/tvRelease"
                app:layout_constraintStart_toEndOf="@+id/cvPosterDetail"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleDetail" />

            <TextView
                android:id="@+id/tvRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/release_sample"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/tvLanguage"
                app:layout_constraintStart_toEndOf="@+id/cvPosterDetail"
                app:layout_constraintTop_toBottomOf="@id/tvGenre" />

            <TextView
                android:id="@+id/tvLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/language_sample"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/cvPosterDetail"
                app:layout_constraintTop_toBottomOf="@+id/tvRelease" />

            <ImageView
                android:contentDescription="@string/rating_image"
                android:id="@+id/ivRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:adjustViewBounds="true"
                android:maxHeight="20dp"
                android:src="@drawable/baseline_favorite_24"
                app:layout_constraintStart_toEndOf="@+id/cvPosterDetail"
                app:layout_constraintTop_toBottomOf="@id/tvLanguage" />

            <TextView
                android:id="@+id/tvSlash_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slash"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/ivRating"
                app:layout_constraintStart_toEndOf="@+id/ivRating"
                app:layout_constraintTop_toTopOf="@id/ivRating" />

            <ImageView
                android:contentDescription="@string/vote_count_image"
                android:id="@+id/ivVoteCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:adjustViewBounds="true"
                android:maxHeight="20dp"
                android:src="@drawable/baseline_person_24"
                app:layout_constraintStart_toEndOf="@+id/tvSlash_1"
                app:layout_constraintTop_toBottomOf="@id/tvLanguage" />

            <TextView
                android:id="@+id/tvRatingResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/_8_5"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/ivRating"
                app:layout_constraintStart_toEndOf="@+id/ivVoteCount"
                app:layout_constraintTop_toTopOf="@id/ivRating" />

            <TextView
                android:id="@+id/tvSlash_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/slash"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/ivRating"
                app:layout_constraintStart_toEndOf="@+id/tvRatingResult"
                app:layout_constraintTop_toTopOf="@id/ivRating" />

            <TextView
                android:id="@+id/tvVoteCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/_14k"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/ivRating"
                app:layout_constraintStart_toEndOf="@+id/tvSlash_2"
                app:layout_constraintTop_toTopOf="@id/ivRating" />

            <TextView
                android:id="@+id/tvOverviewMS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="26dp"
                android:justificationMode="inter_word"
                android:text="@string/overview"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvPosterDetail"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/tvDescriptionMS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:justificationMode="inter_word"
                android:text=""
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOverviewMS"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/tvReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/user_reviews"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tvDescriptionMS" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvReview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/tvReview" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvNoReview"
                app:layout_constraintTop_toBottomOf="@id/tvReview"
                android:text="@string/no_review_at_this_moment"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>